@@ -3,6 +3,8 @@ package com.woowacourse.pickgit.unit.post.domain;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
 
+import com.woowacourse.pickgit.common.factory.PostBuilder;
+import com.woowacourse.pickgit.common.factory.PostFactory;
 import com.woowacourse.pickgit.exception.post.CannotAddTagException;
 import com.woowacourse.pickgit.post.domain.Post;
 import com.woowacourse.pickgit.post.domain.content.PostContent;
@@ -12,16 +14,22 @@ import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
 
 class PostTest {
 
     @DisplayName("Tag를 정상적으로 Post에 등록한다.")
     @Test
     void addTags_ValidTags_RegistrationSuccess() {
-        Post post =
-            new Post(null, null, new PostContent("abc"), null, null, null, new ArrayList<>(), null);
-        List<Tag> tags =
-            Arrays.asList(new Tag("tag1"), new Tag("tag2"), new Tag("tag3"));
+        Post post = new PostBuilder()
+            .content("abc")
+            .build();
+
+        List<Tag> tags = List.of(
+            new Tag("tag1"),
+            new Tag("tag2"),
+            new Tag("tag3")
+        );
 
         post.addTags(tags);
 
@@ -31,13 +39,22 @@ class PostTest {
     @DisplayName("중복되는 이름의 Tag가 존재하면 Post에 추가할 수 없다.")
     @Test
     void addTags_DuplicatedTagName_ExceptionThrown() {
-        Post post =
-            new Post(null, null, new PostContent("abc"), null, null, null, new ArrayList<>(), null);
-        List<Tag> tags =
-            Arrays.asList(new Tag("tag1"), new Tag("tag2"), new Tag("tag3"));
+        Post post = new PostBuilder()
+            .content("abc")
+            .build();
+
+        List<Tag> tags = List.of(
+            new Tag("tag1"),
+            new Tag("tag2"),
+            new Tag("tag3")
+        );
+
         post.addTags(tags);
 
-        List<Tag> duplicatedTags = Arrays.asList(new Tag("tag4"), new Tag("tag3"));
+        List<Tag> duplicatedTags = List.of(
+            new Tag("tag4"),
+            new Tag("tag3")
+        );
 
         assertThatCode(() -> post.addTags(duplicatedTags))
             .isInstanceOf(CannotAddTagException.class)
